// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TargetDistributionScatterPlot Component Render the TargetDistributionContourMap Component having populated props with no errors 1`] = `
<TargetDistributionContourMap
  targets={
    Array [
      Object {
        "dec": 0,
        "optional": true,
        "ra": 0,
        "targetId": "Target: Target_Id 18378 Target_Id 18378 Name: 0, dtype: object",
      },
      Object {
        "dec": 489.331,
        "optional": true,
        "ra": 55.363,
        "targetId": "Target: Target_Id 18378 Target_Id 18378 Name: 0, dtype: object",
      },
    ]
  }
>
  <svg
    height={500}
    width={900}
  />
</TargetDistributionContourMap>
`;

exports[`TargetDistributionScatterPlot Component Render the TargetDistributionContourMap Component having unpopulated props with no errors 1`] = `
<TargetDistributionContourMap
  targets={Array []}
>
  <svg
    height={500}
    width={900}
  />
</TargetDistributionContourMap>
`;
